# rei

./: .gitignore  Cargo.toml  EXAMPLES.md  GRAMMAR.md  README.md  build.rei  calc.lalrpop  calc.rs  project.rei
.cargo/: config.toml
core/: build.rei  project.rei
core/src/: allocator.rei  iter.rei  lib.rei  mem.rei  prelude.rei
docs/: ABSTRACTIONS.md  DESIGN.md  GRAMMAR.md  Gemfile  _config.yml  index.md  reiscript.md
docs/_includes/: head_custom.html
docs/pages/: abstractions.md  design.md  examples.md  grammar.md  lsp.md  parsing.md  phantasm.md  quick-thoughts.md  reiscript.md
example_rei/: example.ijs
lsp/: README.md  build.rei  project.rei
lsp/src/: lib.rei  prelude.rei
neutronapi/: build.rei  project.rei
neutronapi/src/: lib.rei
notes/: 2022-2023-ideas.md  examples.md  grammar.md  linearization.md  rei.md  rein.md  reish.md  syntax-semantics.md
rei-hs/: .gitignore  CHANGELOG.md  README.md  Setup.hs  package.yaml  rei-hs.cabal  stack.yaml
rei-hs/app/: Expr.hs  Main.hs
rei-hs/src/: Dataflow.hs  Expr.hs
rei-hs/test/: Spec.hs
rei-interpreter/: README.md  build.rei  project.rei
rei-interpreter/src/: lib.rei
rei_inputs/: classes.rei  hello_world.rei
rei_inputs/basic_proj/: build.rei  project.rei
rei_inputs/std/: build.rei  project.rei
reic/: README.md  build.rei  project.rei
reic/src/: expr.rei  lower.rei
reitest/: build.rei  project.rei
reitest/src/: lib.rei  main.rei
src/: ast.rs  calc.lalrpop  lib.rs  main.rei  main.rs  prelude.rei  tok.rs
src/base/: codegen.rei  eval.rei  expr.rei  (+8 more)
std/: build.rei  project.rei
(+69 files in other folders)
