cabal-version:      2.4
name:               rei-hs
version:            0.1.0.0
author:             Jasen Qin
maintainer:         jasen.qin33@gmail.com
extra-source-files: CHANGELOG.md

executable rei-hs
  main-is:          Main.hs
  build-depends:
    , base    ^>=4.16.4.0
    , parsec

  hs-source-dirs:   app
  default-language: Haskell2010
